fix overlap bug

--- a/docs/styles/website.css
+++ b/docs/styles/website.css
@@ -51,11 +51,11 @@ nav.page-toc {
 
 @media screen and (max-width: 1800px) {
   .page-inner {
-    margin: 0;
+    margin: 0 0 0 95px;
   }
 }
 
-@media screen and (max-width: 1475px) {
+@media screen and (max-width: 1480px) {
   nav.page-toc {
     position:relative;
     position:static;
